fix(detail): text truncate responsive

--- a/src/app/main/main.scss
+++ b/src/app/main/main.scss
@@ -1,22 +1,3 @@
-/*=============================================
-=          Foundation Flex-Video Mixin        =
-=============================================*/
-@mixin responsive-video {
-  position: relative;
-  padding-bottom: 56.25%;
-  padding-top: 30px; height: 0; overflow: hidden;
-
-  iframe, object, embed {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-  }
-}
-
-/*===========================================*/
-
-
 body {
   background-image: url('/assets/images/phonograph-background.png');
   background-repeat: repeat;
@@ -50,6 +31,15 @@ body {
   }
 }
 
+// detail
+.detail {
+  &__content__description {
+    padding: 0px 15px;
+    word-wrap: break-word;
+  }
+}
+
+// Utils
 .videowrapper {
     float: none;
     clear: both;
